# VibeShell

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: releases.yml
scripts/: bump-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  fs.rs  hotkey.rs  key.rs  lib.rs  logger.rs  main.rs  sftp.rs  ssh.rs  storage.rs
src-tauri/src/core/: backup.rs  fs.rs  key.rs  mod.rs  models.rs  session.rs  sftp.rs  store.rs
src/api/: backup.ts  config.ts  hosts.ts  keys.ts  logging.ts  sftp.ts  ssh.ts
src/components/: ErrorBoundary.tsx  RouteProgress.tsx
src/constants/: app.ts  events.ts  index.ts  language.ts  layout.ts  routes.ts  storage-keys.ts  terminal.ts  theme.ts
src/contexts/: LayoutContext.tsx  TerminalTabsContext.tsx  ToastContext.tsx
src/hooks/: index.ts  use-file-actions.ts  use-hotkey.ts  use-lang.ts  use-monitor.ts  use-notify.ts  use-nprogress.ts  use-tab.ts  use-theme.ts  use-toast.ts
src/i18n/: en.json  index.ts  zh.json
src/lib/: api.ts  log.ts  storage.ts  terminal-themes.ts  types.ts  utils.ts
src/pages/: HomePage.tsx  HostsPage.tsx  KeysPage.tsx  SettingsPage.tsx  SftpPage.tsx  WelcomePage.tsx
src/router/: index.tsx
src/services/: backupService.ts  configService.ts  hostService.ts  index.ts  keyService.ts  sftpService.ts  sshService.ts  usersGroupsService.ts
src/storage/: config.ts  users-groups.ts
src/types/: common.ts  config.ts  host.ts  (+6 more)
(+132 files in other folders)
